Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-17

pn_drain(link, 0) doesn't trigger issuing of flow

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • proton-c
    • None

    Description

      In implementing a timed synchronous get, I issue one unit of credit, wait for the time specified, then I want to drain that credit in order to unambiguously determine if a message arrived or not. I don't want to increase the credit so in calling pn_drain() I want the second parameter to be 0. However doing so fails to trigger a new flow to be sent (with the drain flag set). Using a non-zero credit value, i.e. increasing the credit, does trigger the flow.

      Attachments

        1. PROTON-17.patch
          0.7 kB
          Gordon Sim

        Activity

          People

            rhs Rafael H. Schloming
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: