PROTON-17: applied gordon's patch; added a test for it; fixed an inconsistency in the behavior of pn_drained illustrated by the new test

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1383434 13f79535-47bb-0310-9956-ffa450edef68